# amatak_winapp

./: .gitignore  LICENSE  MANIFEST.in  README.md  _init_scanner.py  amatak-winapp.bat  amatak-winapp.pyw  gen_brand.py  gen_nsi_main.py  gen_tree.py  main.py  publish.py  pyproject.toml  requirements.txt  run_winapp.py  setup.py  sync_version.py  tree.txt  use  winapp.bat
amatak_winapp/: __init__.py  this_init.py  tree.txt  winapp.py
amatak_winapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amatak_winapp/data/: __init__.py
amatak_winapp/gui/: __init__.py  winapp_gui.py
amatak_winapp/installer/: win_installer.nsi
amatak_winapp/scripts/: __init__.py  _init_scanner.py  gen_license.py  gen_license_agreement.py  gen_nsi.py  gen_readme.py  gen_win.py  winapp_init.py
installer/: win_installer.nsi
sample-app/: README.md  __init__.py  config.json  main.py  requirements.txt
sample-app/docs/: __init__.py
sample-app/installer/: win_installer.nsi
