[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amatak-winapp"
version = "1.0.1"
description = "A Python toolkit for creating Windows application installers"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Amatak Development Team", email = "your.email@example.com"}
]
keywords = ["windows", "installer", "nsis", "pyinstaller", "packaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.scripts]
winapp = "amatak_winapp.winapp:main"
amatak-winapp = "amatak_winapp.winapp:main"

[project.urls]
Homepage = "https://github.com/amatak-org/amatak_winappp"
"Bug Tracker" = "https://github.com/amatak-org/amatak_winapp/issues"